force-app/main/default/objects/Toggl_Sync__e/Toggl_Sync__e.object-meta.xml
<CustomObject>
    <description>DEPRECATED: 13-03-24 - Replaced by Timesheet Scheduler</description>
    <label>Toggl Sync</label>
    <pluralLabel>Toggl Syncs</pluralLabel>
</CustomObject>