force-app/main/default/objects/Toggl_Sync__e/fields/Date_From__c.field-meta.xml
<CustomField>
    <fullName>Date_From__c</fullName>
    <description>DEPRECATED: 13-03-24 - Replaced by Timesheet Scheduler</description>
    <label>Date From</label>
    <type>Date</type>
</CustomField>