force-app/main/default/objects/Toggl_Sync__e/fields/Filtered__c.field-meta.xml
<CustomField>
    <fullName>Filtered__c</fullName>
    <defaultValue>false</defaultValue>
    <description>DEPRECATED: 13-03-24 - Replaced by Timesheet Scheduler</description>
    <label>Filtered</label>
    <type>Checkbox</type>
</CustomField>