force-app/main/default/objects/Toggl_Sync__e/fields/Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Record_ID__c</fullName>
    <description>DEPRECATED: 13-03-24 - Replaced by Timesheet Scheduler</description>
    <label>Record ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>