force-app/main/default/objects/Toggl_Sync__e/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>DEPRECATED: 13-03-24 - Replaced by Timesheet Scheduler</description>
    <label>Type</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>